--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.3.1",
     "core-js": "^3.8.0",
+    "date-fns": "^2.16.1",
     "nuxt": "^2.14.7"
   },
   "devDependencies": {
@@ -35,9 +36,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.2",
